# remote-tag-editor

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  program.h
FLAC/: flac.cpp  flac.h
MPEG/: mpeg.cpp  mpeg.h
docker/: Dockerfile  nginx.conf  start.sh
frontend/: README.md  app.js.bak  index.html  styles.css
frontend/backup/: app.js  index.html  styles.css
frontend/js/: config.js  contextMenu.js  fileExplorer.js  historyPanel.js  modal.js  navigation.js  settings.js  sort.js  tagPanel.js  theme.js  upload.js  utils.js
include/: music.h  musicTagHandler.h  musicTagHandlerFactory.h  program.h  scopeTimer.h
include/format_handlers/: flacTagHandler.h  mpeg4TagHandler.h  mpegTagHandler.h  oggFlacTagHandler.h  oggOpusTagHandler.h  oggSpeexTagHandler.h  oggTagHandler.h  oggVorbisTagHandler.h
src/: main.cpp  musicTagHandlerFactory.cpp  program.cpp  tagNormalization.cpp
src/format_handlers/: flacTagHandler.cpp  flacTagHandler.h  mpeg4TagHandler.cpp  mpeg4TagHandler.h  mpegTagHandler.cpp  mpegTagHandler.h  oggFlacTagHandler.cpp  oggFlacTagHandler.h  oggOpusTagHandler.cpp  oggOpusTagHandler.h  oggSpeexTagHandler.cpp  oggSpeexTagHandler.h  oggTagHandler.cpp  oggTagHandler.h  oggVorbisTagHandler.cpp  oggVorbisTagHandler.h
src/tests/: addFieldTagTest.cpp  addFieldTagTest.h  editTagTest.cpp  editTagTest.h  removeFieldTagTest.cpp  removeFieldTagTest.h  tagJsonTest.cpp  tagJsonTest.h  tests.cpp  tests.h
